--- a/index.html
+++ b/index.html
@@ -90,25 +90,32 @@
                     персонажа,
                     исследуя открытый мир, где твои поступки влияют на ход сюжета и всё, что тебя окружает.
                 </p>
+            
                 <div class="images-gallery">
                     <ul class="images-gallery__list">
                         <li class="images-gallery__frame images-gallery__item  images-gallery__item-1">
                             <picture>
-                                <source srcset="images/nite-city/nite-city-img-1-320.jpg" media="(max-width:952px)">
+                                <source type="image/avif" srcset="images/nite-city/card-1-952/nite-city-1-952.avif 1x, images/nite-city/card-1-952/nite-city-1-952@2x.avif 2x" media="(max-width: 952px)">
+                                <source type="image/webp" srcset="images/nite-city/card-1-952/nite-city-1-952.webp 1x, images/nite-city/card-1-952/nite-city-1-952@2x.webp 2x" media="(max-width: 952px)">
+                                <source srcset="images/nite-city/card-1-952/nite-city-1-952.jpg" media="(max-width:952px)">
                                 <img class="images-gallery__img-1" src="images/nite-city/nite-city-1-1024-1920.png" width="460" height="206"
                                     alt="">
                             </picture>
                         </li>
                         <li class="images-gallery__frame images-gallery__item images-gallery__item-2">
                             <picture>
-                                <source srcset="images/nite-city/nite-city-img-2-320.jpg" media="(max-width:952px)">
+                                <source type="image/avif" srcset="images/nite-city/card-2-952/nite-city-2-952.avif 1x, images/nite-city/card-2-952/nite-city-2-952@2x.avif 2x" media="(max-width: 952px)">
+                                <source type="image/webp" srcset="images/nite-city/card-2-952/nite-city-2-952.webp 1x, images/nite-city/card-2-952/nite-city-2-952@2x.webp 2x" media="(max-width: 952px)">
+                                <source srcset="images/nite-city/card-2-952/nite-city-2-952.jpg" media="(max-width:952px)">
                                 <img class="images-gallery__img-2" src="images/nite-city/nite-city-2-1024-1920.png" width="460" height="196"
                                     alt="">
                             </picture>
                         </li>
                         <li class="images-gallery__frame images-gallery__item images-gallery__item-3">
                             <picture>
-                                <source srcset="images/nite-city/nite-city-img-3-320.jpg" media="(max-width:952px)">
+                                <source type="image/avif" srcset="images/nite-city/card-3-952/nite-city-3-952.avif 1x, images/nite-city/card-3-952/nite-city-3-952@2x.avif 2x" media="(max-width: 952px)">
+                                <source type="image/webp" srcset="images/nite-city/card-3-952/nite-city-3-952.webp 1x, images/nite-city/card-3-952/nite-city-3-952@2x.webp 2x" media="(max-width: 952px)">
+                                <source srcset="images/nite-city/card-3-952/nite-city-3-952.jpg" media="(max-width:952px)">
                                 <source srcset="images/nite-city/nite-city-img-3-1920.jpg" media="(min-width:1280px)">
                                 <img class="images-gallery__img-3" src="images/nite-city/nite-city-3-1024.jpg"
                                     width="952" height="424" alt="">
