Add img item 1 4x

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                     <ul class="images-gallery__list">
                         <li class="images-gallery__frame images-gallery__item  images-gallery__item-1">
                             <picture>
+                                <source type="image/webp" srcset="images/nite-city/card-1-952/nite-city-1-952.webp 1x, images/nite-city/card-1-952/nite-city-1-952@2x.webp 2x, images/nite-city/card-1-952/nite-city-1-952@4x.webp 4x" media="(max-width: 952px)">
                                 <source type="image/avif" srcset="images/nite-city/card-1-952/nite-city-1-952.avif 1x, images/nite-city/card-1-952/nite-city-1-952@2x.avif 2x, images/nite-city/card-1-952/nite-city-1-952@3x.avif 3x" media="(max-width: 952px)">
-                                <source type="image/webp" srcset="images/nite-city/card-1-952/nite-city-1-952.webp 1x, images/nite-city/card-1-952/nite-city-1-952@2x.webp 2x" media="(max-width: 952px)">
                                 <source srcset="images/nite-city/card-1-952/nite-city-1-952.jpg" media="(max-width:952px)">
                                 <img class="images-gallery__img-1" src="images/nite-city/nite-city-1-1024-1920.png" width="460" height="206"
                                     alt="">
