--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         </li>
                         <li class="images-gallery__frame images-gallery__item images-gallery__item-3">
                             <picture>
-                                <source type="image/avif" srcset="images/nite-city/card-3-952/nite-city-3-952.avif 1x, images/nite-city/card-3-952/nite-city-3-952@2x.avif 2x" media="(max-width: 952px)">
+                                <source type="image/avif" srcset="images/nite-city/card-3-952/nite-city-3-952.avif 1x, images/nite-city/card-3-952/nite-city-3-952@2x.avif 2x, images/nite-city/card-3-952/nite-city-3-952@4x.avif 4x " media="(max-width: 952px)">
                                 <source type="image/webp" srcset="images/nite-city/card-3-952/nite-city-3-952.webp 1x, images/nite-city/card-3-952/nite-city-3-952@2x.webp 2x" media="(max-width: 952px)">
                                 <source srcset="images/nite-city/card-3-952/nite-city-3-952.jpg" media="(max-width:952px)">
                                 <source srcset="images/nite-city/nite-city-img-3-1920.jpg" media="(min-width:1280px)">
