--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                                 <source type="image/webp" srcset="images/nite-city/card-1-952/nite-city-1-952.webp 1x, images/nite-city/card-1-952/nite-city-1-952@2x.webp 2x, images/nite-city/card-1-952/nite-city-1-952@3x.webp 3x, images/nite-city/card-1-952/nite-city-1-952@4x.webp 4x" media="(max-width: 952px)">
                                 <source srcset="images/nite-city/card-1-952/nite-city-1-952.jpg" media="(max-width:952px)"> 
                                 
-                                <source type="image/avif" srcset="images/nite-city/card-1-952-1920/nite-city-1-952-1920@1x.avif 1x, images/nite-city/card-1-952-1920/nite-city-1-952-1920@2x.avif 2x, images/nite-city/card-1-952-1920/nite-city-1-952-1920@3x.avif 3x,  images/nite-city/card-1-952-1920/nite-city-1-952-1920@4x.avif 4x" media="(min-width: 953px)">
-                                <source type="image/webp" srcset="images/nite-city/card-1-952-1920/nite-city-1-952-1920@1x.webp 1x, images/nite-city/card-1-952-1920/nite-city-1-952-1920@2x.webp 2x, images/nite-city/card-1-952-1920/nite-city-1-952-1920@3x.webp 3x,  images/nite-city/card-1-952-1920/nite-city-1-952-1920@4x.webp 4x" media="(min-width: 953px)">
+                                <source type="image/avif" srcset="images/nite-city/card-1-952-1920/nite-city-1-952-1920.avif 1x, images/nite-city/card-1-952-1920/nite-city-1-952-1920@2x.avif 2x, images/nite-city/card-1-952-1920/nite-city-1-952-1920@3x.avif 3x,  images/nite-city/card-1-952-1920/nite-city-1-952-1920@4x.avif 4x" media="(min-width: 953px)">
+                                <source type="image/webp" srcset="images/nite-city/card-1-952-1920/nite-city-1-952-1920.webp 1x, images/nite-city/card-1-952-1920/nite-city-1-952-1920@2x.webp 2x, images/nite-city/card-1-952-1920/nite-city-1-952-1920@3x.webp 3x,  images/nite-city/card-1-952-1920/nite-city-1-952-1920@4x.webp 4x" media="(min-width: 953px)">
                                 <img class="images-gallery__img-1" src="images/nite-city/nite-city-1-1024-1920.png" width="460" height="196"
                                     alt="">
                             </picture>
@@ -112,8 +112,8 @@
                                 <source type="image/webp" srcset="images/nite-city/card-2-952/nite-city-2-952.webp 1x, images/nite-city/card-2-952/nite-city-2-952@2x.webp 2x, images/nite-city/card-2-952/nite-city-2-952@3x.webp 3x, images/nite-city/card-2-952/nite-city-2-952@4x.webp 4x" media="(max-width: 952px)">
                                 <source srcset="images/nite-city/card-2-952/nite-city-2-952.jpg" media="(max-width:952px)">
                                 
-                                <source type="image/avif" srcset="images/nite-city/card-2-952-1920/nite-city-2-952-1920@1x.avif 1x, images/nite-city/card-2-952-1920/nite-city-2-952-1920@2x.avif 2x, images/nite-city/card-2-952-1920/nite-city-2-952-1920@3x.avif 3x,  images/nite-city/card-2-952-1920/nite-city-2-952-1920@4x.avif 4x" media="(min-width: 953px)">
-                                <source type="image/webp" srcset="images/nite-city/card-2-952-1920/nite-city-2-952-1920@1x.webp 1x, images/nite-city/card-2-952-1920/nite-city-2-952-1920@2x.webp 2x, images/nite-city/card-2-952-1920/nite-city-2-952-1920@3x.webp 3x,  images/nite-city/card-2-952-1920/nite-city-2-952-1920@4x.webp 4x" media="(min-width: 953px)">
+                                <source type="image/avif" srcset="images/nite-city/card-2-952-1920/nite-city-2-952-1920.avif 1x, images/nite-city/card-2-952-1920/nite-city-2-952-1920@2x.avif 2x, images/nite-city/card-2-952-1920/nite-city-2-952-1920@3x.avif 3x,  images/nite-city/card-2-952-1920/nite-city-2-952-1920@4x.avif 4x" media="(min-width: 953px)">
+                                <source type="image/webp" srcset="images/nite-city/card-2-952-1920/nite-city-2-952-1920.webp 1x, images/nite-city/card-2-952-1920/nite-city-2-952-1920@2x.webp 2x, images/nite-city/card-2-952-1920/nite-city-2-952-1920@3x.webp 3x,  images/nite-city/card-2-952-1920/nite-city-2-952-1920@4x.webp 4x" media="(min-width: 953px)">
                                 <img class="images-gallery__img-2" src="images/nite-city/nite-city-2-1024-1920.png" width="460" height="196"
                                     alt="">
                             </picture>
@@ -124,8 +124,8 @@
                                 <source type="image/webp" srcset="images/nite-city/card-3-952/nite-city-3-952.webp 1x, images/nite-city/card-3-952/nite-city-3-952@2x.webp 2x, images/nite-city/card-3-952/nite-city-3-952@3x.webp 3x, images/nite-city/card-3-952/nite-city-3-952@4x.webp 4x" media="(max-width: 952px)">
                                 <source srcset="images/nite-city/card-3-952/nite-city-3-952.jpg" media="(max-width:952px)">
 
-                                <source type="image/avif" srcset="images/nite-city/card-3-952-1920/nite-city-3-952-1920@1x.avif 1x, images/nite-city/card-3-952-1920/nite-city-3-952-1920@2x.avif 2x, images/nite-city/card-3-952-1920/nite-city-3-952-1920@3x.avif 3x,  images/nite-city/card-3-952-1920/nite-city-3-952-1920@4x.avif 4x" media="(min-width: 953px)">
-                                <source type="image/webp" srcset="images/nite-city/card-3-952-1920/nite-city-3-952-1920@1x.webp 1x, images/nite-city/card-3-952-1920/nite-city-3-952-1920@2x.webp 2x, images/nite-city/card-3-952-1920/nite-city-3-952-1920@3x.webp 3x,  images/nite-city/card-3-952-1920/nite-city-2-952-1920@4x.webp 4x" media="(min-width: 953px)">
+                                <source type="image/avif" srcset="images/nite-city/card-3-952-1920/nite-city-3-952-1920.avif 1x, images/nite-city/card-3-952-1920/nite-city-3-952-1920@2x.avif 2x, images/nite-city/card-3-952-1920/nite-city-3-952-1920@3x.avif 3x,  images/nite-city/card-3-952-1920/nite-city-3-952-1920@4x.avif 4x" media="(min-width: 953px)">
+                                <source type="image/webp" srcset="images/nite-city/card-3-952-1920/nite-city-3-952-1920.webp 1x, images/nite-city/card-3-952-1920/nite-city-3-952-1920@2x.webp 2x, images/nite-city/card-3-952-1920/nite-city-3-952-1920@3x.webp 3x,  images/nite-city/card-3-952-1920/nite-city-2-952-1920@4x.webp 4x" media="(min-width: 953px)">
                                 <source srcset="images/nite-city/nite-city-img-3-1920.jpg" media="(min-width:953px)">
                                 <img class="images-gallery__img-3" src="images/nite-city/nite-city-3-1024.jpg"
                                     width="952" height="424" alt="">
