--- a/index.html
+++ b/index.html
@@ -126,9 +126,7 @@
 
                                 <source type="image/avif" srcset="images/nite-city/card-3-952-1920/nite-city-3-952-1920.avif 1x, images/nite-city/card-3-952-1920/nite-city-3-952-1920@2x.avif 2x, images/nite-city/card-3-952-1920/nite-city-3-952-1920@3x.avif 3x,  images/nite-city/card-3-952-1920/nite-city-3-952-1920@4x.avif 4x" media="(min-width: 953px)">
                                 <source type="image/webp" srcset="images/nite-city/card-3-952-1920/nite-city-3-952-1920.webp 1x, images/nite-city/card-3-952-1920/nite-city-3-952-1920@2x.webp 2x, images/nite-city/card-3-952-1920/nite-city-3-952-1920@3x.webp 3x,  images/nite-city/card-3-952-1920/nite-city-2-952-1920@4x.webp 4x" media="(min-width: 953px)">
-                                <source srcset="images/nite-city/nite-city-img-3-1920.jpg" media="(min-width:953px)">
-                                <img class="images-gallery__img-3" src="images/nite-city/nite-city-3-1024.jpg"
-                                    width="952" height="424" alt="">
+                                <img class="images-gallery__img-3" src="images/nite-city/nite-city-3-1024.jpg">
                             </picture>
                         </li>
                     </ul>
