--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <body>
     <div class="content__conteiner">
         <header class="header">
-            <div id="delivery-widget"></div>
+
             <div class="header__slider">
                 <picture>
                     <source type="image/avif" srcset="images/header/header-bg-img-1-320.avif 1x, images/header/header-bg-img-1-320-@2x.avif 2x" media="(max-width: 320px)">
@@ -324,7 +324,7 @@
             </div>
         </div>
         </section>
-        <div id="delivery-widget"></div>
+        <div class="widget" id="delivery-widget">jlk;/,jgmhjk';;/khcjgvhjk'lgkfjycghjkpkh;ikgu</div>
         
         
     </main>
