Add  stock-img responsibile images

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
         </section>
         <section class="stock">
             <div class="content__conteiner">
+        
                 <div class="stock__inner content__padding">
                 <h2 class="section-title section-title--color-white stock__title stock-title__icon">
                     Играй и выигрывай!
@@ -160,14 +161,14 @@
                     <div class="stock__img">
                         <div class="stock__img-conteiner stock__img-conteiner--xbox">
                             <picture>
-                                
-                                <source type="image/webp" srcset="images/stock/xbox-320.webp 1x, images/stock/xbox-320@2x.webp 2x,  images/stock/xbox-320@3x.webp 3x, " media="(max-width: 400px)">
+                                <source type="image/webp" srcset="images/stock/xbox-320.webp 1x, images/stock/xbox-320@2x.webp 2x,  images/stock/xbox-320@3x.webp 3x" media="(max-width: 400px)">
                                 <source srcset="images/stock/xbox-320.png" media="(max-width:400px)">
                                 <img class="stock__img-xbox" src="images/stock/xbox-1024-1920.png" width="296" height="351" alt="">
                             </picture>
                         </div>
                         <div class="stock__img-conteiner stock__img-conteiner--sony">
                             <picture>
+                                <source type="image/webp" srcset="image/stock/playstation-320.webp 1x, images/stock/playstation-320@2x.webp 2x, images/stock/playstation-320@3x.webp 3x" media="(max-width:400px)">
                                 <source srcset="images/stock/playstation-320.png" media="(max-width:400px)">
                                 <img class="stock__img-xbox" src="images/stock/sony-1024-1920.png" width="296" height="351" alt="">
                             </picture>
