Add style checkbox in stock block

--- a/index.html
+++ b/index.html
@@ -154,7 +154,9 @@
                         <input class="stock__input-file stock__form-text" type="file" placeholder="Загрузите скриншот">
                         <button class="btn btn-form ">Отправить</button>
                         <label class="checkbox stock__form-text">
-                            <input class="" type="checkbox"> Согласен на обработку персональных данных
+                            <input class="checkbox--no-defult-style" type="checkbox"> 
+                            <span class="checkbox--castom-style"></span>
+                            Согласен на обработку персональных данных
                         </label>
 
                     </form>
@@ -168,7 +170,7 @@
                         </div>
                         <div class="stock__img-conteiner stock__img-conteiner--sony">
                             <picture>
-                                <source type="image/webp" srcset="image/stock/playstation-320.webp 1x, images/stock/playstation-320@2x.webp 2x, images/stock/playstation-320@3x.webp 3x" media="(max-width:400px)">
+                                <source type="image/webp" srcset="images/stock/playstation-320.webp 1x, images/stock/playstation-320@2x.webp 2x, images/stock/playstation-320@3x.webp 3x" media="(max-width:400px)">
                                 <source srcset="images/stock/playstation-320.png" media="(max-width:400px)">
                                 <img class="stock__img-xbox" src="images/stock/sony-1024-1920.png" width="296" height="351" alt="">
                             </picture>
